--- a/index.html
+++ b/index.html
@@ -20,20 +20,12 @@
   <main class="page__content">
     <article class="coming-soon">
       <header class="article__header">
-        <div class="container">
+        <div class="container header__container">
           <a href="#" class="link link__header"><img src="/img/logo.svg" alt="Base Apparel logo"
               class="img logo__img"></a>
         </div>
       </header>
-      <img src="/img/hero-mobile.jpg" alt="hero image" srcset="/img/hero-mobile.jpg 375w, 
-              /img/hero-desktop.jpg 610w" 
-      sizes="(max-width: 375px) 375px, 610px"  class="img article__img">
-      <img srcset="img/elva-fairy-375w.jpg 375w,
-      img/elva-fairy-1440w.jpg 1440w"
-     sizes="(max-width: 600px) 375px,
-            1440px"
-     src="img/elva-fairy-1440w.jpg"
-     alt="Elva dressed as a fairy">
+      <img src="/img/hero-mobile.jpg" alt="hero image" srcset="/img/hero-mobile.jpg 750w, /img/hero-desktop.jpg 1440w" sizes="(min-width: 1440px) 1440px, 100vw" class="img article__img">
       <article class="article__content">
         <div class="container container--article">
           <h1 class="content__title">
@@ -46,11 +38,12 @@
             Hello fellow shoppers! We're currently building our new fashion store.
             Add your email below to stay up-to-date with announcements and our launch deals.
           </p>
-          <form action="#" class="content__form" novalidate>
+          <form action="#" class="content__form">
 
-            <input type="email" class="form__input" placeholder="Email Address">
+            <input type="email" class="form__input" placeholder="Email Address" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required aria-label="email address">
             <button type="submit" class="form__submit" aria="submit"><img src="/img/icon-arrow.svg"
                 alt="submit icon"></button>
+             <span class="form-error"></span>
           </form>
       </article>
       </div>
