--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
 <body class="page">
 
   <main class="page__content">
-    <div class="coming-soon">
+    <article class="coming-soon">
       <header class="article__header">
         <div class="container header__container">
           <a href="#" class="link link__header"><img src="/img/logo.svg" alt="Base Apparel logo"
               class="img logo__img"></a>
         </div>
       </header>
-      <img src="/img/hero-mobile.jpg" alt="hero image" srcset="/img/hero-mobile.jpg 750w, /img/hero-desktop.jpg 1440w"
-        sizes="(min-width: 1440px) 1440px, 100vw" class="img article__img">
+      <img src="/img/hero-mobile.jpg" alt="hero image" srcset="/img/hero-mobile.jpg 750w, /img/hero-desktop.jpg 1440w" sizes="(min-width: 1440px) 1440px, 100vw" class="img article__img">
       <article class="article__content">
         <div class="container container--article">
           <h2 class="content__title">
@@ -41,22 +40,22 @@
           </p>
           <form action="#" class="content__form">
 
-            <input type="email" class="form__input" placeholder="Email Address"
-              pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required aria-label="email address">
-            <button type="submit" class="form__submit"><img src="/img/icon-arrow.svg" alt="submit icon"></button>
-            <span class="form-error"></span>
+            <input type="email" class="form__input" placeholder="Email Address" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required aria-label="email address">
+            <button type="submit" class="form__submit" ><img src="/img/icon-arrow.svg"
+                alt="submit icon"></button>
+             <span class="form-error"></span>
           </form>
       </article>
-    </div>
-    <footer class="article__footer">
-      <div class="container">
-        <p class="attribution">
-          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-          Coded by <a href="#">AX-d</a>.
-        </p>
       </div>
-    </footer>
-    </div>
+      <footer class="article__footer">
+        <div class="container">
+          <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="#">AX-d</a>.
+          </p>
+        </div>
+      </footer>
+    </article>
 
   </main>
 
